<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Amigo Oculto</string>
    <string name="action_settings">Settings</string>
    <string name="numbers_friends">Número de Amigos</string>
    <string name="text_numbers_friends">Quantidade de Amigos</string>
    <string name="emails">Cadastrar Emails</string>
    <string name="title_activity_cadastro_email">CadastroEmail</string>
    <string name="name">Nome: </string>
    <string name="mail">E-mail: </string>
    <string name="sortear">Sortear!</string>
    <string name="divisao_email">/</string>
    <string name="total_enviado">0</string>
    <string name="total_email">0</string>

</resources>